Fixed some stuff in autotools conf

--- a/configure.ac
+++ b/configure.ac
@@ -13,9 +13,6 @@ PKG_CHECK_MODULES(DEPS, libpng >= 1.2 libxml++-2.6 >= 2.6)
 AC_SUBST(DEPS_CFLAGS)
 AC_SUBST(DEPS_LIBS)
 
-# add to cflags
-CFLAGS = "$CFLAGS $DEPS_CFLAGS"
-
 # Use the macro SDL provides to check the installed version of the SDL
 # development environment.  Abort the configuration process if the
 # minimum version we require isn't available.
@@ -25,7 +22,7 @@ AM_PATH_SDL($SDL_VERSION,
 	    AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
 )
 # Add the SDL preprocessor flags and libraries to the build process
-CFLAGS="$CFLAGS $DEPS_CFLAGS $SDL_CFLAGS"
+DEPS_CFLAGS="$DEPS_CFLAGS $SDL_CFLAGS"
 DEPS_LIBS="$DEPS_LIBS $SDL_LIBS"
 
 # add OpenGL (could add check for OpenGL here)
