Added pnpoly function and transform functor

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,7 +2,8 @@ bin_PROGRAMS = game
 
 game_SOURCES = main.cc collidable.h controllable.h point.h point.cc \
 	renderable.h tank.h tank.cc texture.h texture.cc timer.h timer.cc \
-	turret.h turret.cc usertank.h usertank.cc world.h world.cc
+	turret.h turret.cc usertank.h usertank.cc world.h world.cc pnpoly.cc \
+	transform.cc
 
 EXTRA_DIST = tools/shared_ptr.h
 
