Added friendly tanks, and made them fire bullets
AiTank is a general AI tank that tries to drive to a
location. FriendlyTank is a specialisation that follows another tank.
They can all fire bullets now.  The bullets don't do anything yet.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,7 +4,8 @@ game_SOURCES = main.cc collidable.h controllable.h point.h point.cc	\
 	renderable.h tank.h tank.cc texture.h texture.cc timer.h	\
 	timer.cc turret.h turret.cc usertank.h usertank.cc world.h	\
 	world.cc pnpoly.h pnpoly.cc transform.h transform.cc		\
-	friendlytank.h friendlytank.cc
+	friendlytank.h friendlytank.cc aitank.h aitank.cc bullet.h	\
+	bullet.cc sprite.h sprite.cc
 
 EXTRA_DIST = tools/shared_ptr.h
 
